Fix preprocessing with intersecting cycles